--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -3,7 +3,7 @@ name: podiumd
 description: A Helm chart for PodiumD
 type: application
 version: 1.0.0-alpha.2
-appVersion: "latest"
+appVersion: "1.3.0"
 dependencies:
   - name: keycloak
     version: ~21.2.2
@@ -42,12 +42,9 @@ dependencies:
     condition: openformulieren.enabled
     tags:
       - formulier
-      - portaal
-      - zaak
   - name: openinwoner
     version: ~1.3.2
     repository: "@maykinmedia"
     condition: openinwoner.enabled
     tags:
       - portaal
-      - zaak
