--- a/charts/podiumd/templates/keycloak-config-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-config-configmap.yaml
@@ -22,45 +22,45 @@ data:
         enabled: true
         clientAuthenticatorType: client-secret
         redirectUris:
-          - "{{ .Values.openzaak.configuration.url }}/*"
+          - "{{ .Values.openzaak.configuration.oidcUrl }}/*"
         webOrigins:
-          - "{{ .Values.openzaak.configuration.url }}/*"
+          - "{{ .Values.openzaak.configuration.oidcUrl }}/*"
         secret: {{ .Values.openzaak.configuration.oidcSecret | quote }}
       - clientId: opennotificaties
         name: Open Notificaties
         enabled: true
         clientAuthenticatorType: client-secret
         redirectUris:
-          - "{{ .Values.opennotificaties.configuration.url }}/*"
+          - "{{ .Values.opennotificaties.configuration.oidcUrl }}/*"
         webOrigins:
-          - "{{ .Values.opennotificaties.configuration.url }}/*"
+          - "{{ .Values.opennotificaties.configuration.oidcUrl }}/*"
         secret: {{ .Values.opennotificaties.configuration.oidcSecret | quote }}
       - clientId: objecten
         name: Objecten
         enabled: true
         clientAuthenticatorType: client-secret
         redirectUris:
-          - "{{ .Values.objecten.configuration.url }}/*"
+          - "{{ .Values.objecten.configuration.oidcUrl }}/*"
         webOrigins:
-          - "{{ .Values.objecten.configuration.url }}/*"
+          - "{{ .Values.objecten.configuration.oidcUrl }}/*"
         secret: {{ .Values.objecten.configuration.oidcSecret | quote }}
       - clientId: objecttypen
         name: Objecttypen
         enabled: true
         clientAuthenticatorType: client-secret
         redirectUris:
-          - "{{ .Values.objecttypen.configuration.url }}/*"
+          - "{{ .Values.objecttypen.configuration.oidcUrl }}/*"
         webOrigins:
-          - "{{ .Values.objecttypen.configuration.url }}/*"
+          - "{{ .Values.objecttypen.configuration.oidcUrl }}/*"
         secret: {{ .Values.objecttypen.configuration.oidcSecret | quote }}
       - clientId: openklant
         name: Open Klant
         enabled: true
         clientAuthenticatorType: client-secret
         redirectUris:
-          - "{{ .Values.openklant.configuration.url }}/*"
+          - "{{ .Values.openklant.configuration.oidcUrl }}/*"
         webOrigins:
-          - "{{ .Values.openklant.configuration.url }}/*"
+          - "{{ .Values.openklant.configuration.oidcUrl }}/*"
         secret: {{ .Values.openklant.configuration.oidcSecret | quote }}
       {{- if .Values.tags.formulier -}}
       - clientId: openformulieren
@@ -68,9 +68,9 @@ data:
         enabled: true
         clientAuthenticatorType: client-secret
         redirectUris:
-          - "{{ .Values.openformulieren.configuration.url }}/*"
+          - "{{ .Values.openformulieren.configuration.oidcUrl }}/*"
         webOrigins:
-          - "{{ .Values.openformulieren.configuration.url }}/*"
+          - "{{ .Values.openformulieren.configuration.oidcUrl }}/*"
         secret: {{ .Values.openformulieren.configuration.oidcSecret | quote }}
       {{- end }}
       {{- if .Values.tags.portaal -}}
@@ -79,9 +79,9 @@ data:
         enabled: true
         clientAuthenticatorType: client-secret
         redirectUris:
-          - "{{ .Values.openinwoner.configuration.url }}/*"
+          - "{{ .Values.openinwoner.configuration.oidcUrl }}/*"
         webOrigins:
-          - "{{ .Values.openinwoner.configuration.url }}/*"
+          - "{{ .Values.openinwoner.configuration.oidcUrl }}/*"
         secret: {{ .Values.openinwoner.configuration.oidcSecret | quote }}
       {{- end }}
       {{- if .Values.tags.contact -}}
@@ -90,9 +90,9 @@ data:
         enabled: true
         clientAuthenticatorType: client-secret
         redirectUris:
-          - "{{ .Values.kiss.configuration.url }}/*"
+          - "{{ .Values.kiss.configuration.oidcUrl }}/*"
         webOrigins:
-          - "{{ .Values.kiss.configuration.url }}/*"
+          - "{{ .Values.kiss.configuration.oidcUrl }}/*"
         secret: {{ .Values.kiss.configuration.oidcSecret | quote }}
         protocolMappers:
           - name: kiss-roles
@@ -114,9 +114,9 @@ data:
         enabled: true
         clientAuthenticatorType: client-secret
         redirectUris:
-          - "{{ .Values.zac.configuration.url }}/*"
+          - "{{ .Values.zac.configuration.oidcUrl }}/*"
         webOrigins:
-          - "{{ .Values.zac.configuration.url }}/*"
+          - "{{ .Values.zac.configuration.oidcUrl }}/*"
         secret: {{ .Values.zac.configuration.oidcSecret | quote }}
         protocolMappers:
           - name: zac-roles
