--- a/charts/brp-mock/values.yaml
+++ b/charts/brp-mock/values.yaml
@@ -1,6 +1,11 @@
-image:
-  brpProxyName: iswish/haal-centraal-brp-bevragen-proxy
-  brpProxyTag: 2.0.20
-  gbaMockName: iswish/haal-centraal-brp-bevragen-gba-mock
-  gbaMockTag: 2.0.8
-  pullPolicy: IfNotPresent
+brpProxy:
+  image:
+    repository: iswish/haal-centraal-brp-bevragen-proxy
+    tag: 2.0.20
+    pullPolicy: IfNotPresent
+    
+gbaMock:
+  image:
+    repository: iswish/haal-centraal-brp-bevragen-gba-mock
+    tag: 2.0.8
+    pullPolicy: IfNotPresent
