--- a/charts/brp-mock/Chart.yaml
+++ b/charts/brp-mock/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: brp-mock
 description: A Helm chart for the BRP Proxy and GBA Mock combination
-version: 1.0.0
-appVersion: "2.0.8"
+version: 1.1.0
+appVersion: "2.0.x"
 
