--- a/charts/vngreferentielijsten/templates/deployment.yaml
+++ b/charts/vngreferentielijsten/templates/deployment.yaml
@@ -76,3 +76,15 @@ spec:
                   key: secret-key
             - name: DJANGO_SETTINGS_MODULE
               value: vrl.conf.docker
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
