--- a/charts/vngreferentielijsten/templates/secret.yaml
+++ b/charts/vngreferentielijsten/templates/secret.yaml
@@ -7,5 +7,5 @@ metadata:
     {{- include "vrl.labels" . | nindent 4 }}
 stringData:
   db-password: {{ required ".Values.db.password is required" .Values.db.password | quote}}
-  secret-key: {{ required ".Values.db.password is required" .Values.secretKey | quote}}
+  secret-key: {{ required ".Values.secretKey is required" .Values.secretKey | quote}}
 
