--- a/charts/brpmock/templates/brpmock-service.yaml
+++ b/charts/brpmock/templates/brpmock-service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gbamock
+  name: brpmock
   labels:
-    app.kubernetes.io/name: gbamock
+    app.kubernetes.io/name: brpmock
     {{- include "bm.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   selector:
-    app.kubernetes.io/name: {{ include "bm.name" . }}-gba-mock
+    app.kubernetes.io/name: {{ include "bm.name" . }}-brpproxy
   ports:
-    - name: "5010"
-      port: 5010
+    - name: http
+      port: 80
       targetPort: http
