--- a/charts/brpmock/values.yaml
+++ b/charts/brpmock/values.yaml
@@ -1,11 +1,17 @@
-brpProxy:
+brpproxy:
   image:
     repository: iswish/haal-centraal-brp-bevragen-proxy
     tag: 2.0.20
     pullPolicy: IfNotPresent
-    
-gbaMock:
+  nodeSelector: { }
+  tolerations: [ ]
+  affinity: { }
+
+gbamock:
   image:
     repository: iswish/haal-centraal-brp-bevragen-gba-mock
     tag: 2.0.8
     pullPolicy: IfNotPresent
+  nodeSelector: { }
+  tolerations: [ ]
+  affinity: { }
