--- a/charts/vngreferentielijsten/Chart.yaml
+++ b/charts/vngreferentielijsten/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: vng-referentielijsten
+name: vngreferentielijsten
 description: A Helm chart for VNG Referentielijsten reference implementation
-version: 1.0.0
+version: 1.1.0
 appVersion: "0.6.1"
