Refactor Helm charts brpmock en vngreferentielijsten plus toevoegen Helm chart openldap

--- a/charts/vngreferentielijsten/templates/configmap.yaml
+++ b/charts/vngreferentielijsten/templates/configmap.yaml
@@ -6,6 +6,6 @@ metadata:
     app.kubernetes.io/name: {{ include "vrl.name" . }}
     {{- include "vrl.labels" . | nindent 4 }}
 data:
-  db-host: {{ required ".Values.db.host is required" .Values.db.host  | quote}}
-  db-name: {{ required ".Values.db.name is required" .Values.db.name  | quote}}
-  db-user: {{ required ".Values.db.user is required" .Values.db.user  | quote}}
+  db-host: {{ required ".Values.database.host is required" .Values.db.host  | quote}}
+  db-name: {{ required ".Values.database.name is required" .Values.db.name  | quote}}
+  db-user: {{ required ".Values.database.user is required" .Values.db.user  | quote}}
