--- a/charts/zac/Chart.yaml
+++ b/charts/zac/Chart.yaml
@@ -1,13 +1,14 @@
 apiVersion: v2
 name: zaakafhandelcomponent
 description: A Helm chart for installing Zaakafhandelcomponent
-version: 0.4.3
+version: 1.0.0
 appVersion: "latest"
 dependencies:
   - name: opentelemetry-collector
-    version: 0.55.2
+    alias: opentelemetrycollector
+    version: "0.55.2"
     repository: https://open-telemetry.github.io/opentelemetry-helm-charts
-    condition: opentelemetry-collector.enabled
+    condition: opentelemetrycollector.enabled
   - name: solr
-    version: 9.1.3
+    version: "9.1.3"
     repository: https://charts.bitnami.com/bitnami
