--- a/charts/zac/templates/config.yaml
+++ b/charts/zac/templates/config.yaml
@@ -35,6 +35,7 @@ data:
   OFFICE_CONVERTER_CLIENT_MP_REST_URL: {{ printf "http://%s-office-converter.%s" (include "zaakafhandelcomponent.fullname" .) .Release.Namespace }}
   OPA_API_CLIENT_MP_REST_URL: http://localhost:8181
   OPEN_FORMS_URL: {{ required "Valid .Values.openForms.url entry required!" .Values.openForms.url }}
+  SIGNALERINGEN_DELETE_OLDER_THAN_DAYS: {{ required "Valid .Values.deleteSignaleringenCronjob.deleteOlderThanDays entry required!" .Values.deleteSignaleringenCronjob.deleteOlderThanDays | quote }}
   SMTP_PORT: {{ required "Valid .Values.mail.smtp.port entry required!" .Values.mail.smtp.port | quote }}
   SMTP_SERVER: {{ required "Valid .Values.mail.smtp.server entry required!" .Values.mail.smtp.server }}
   {{- if index .Values "opentelemetry-collector" "enabled" }}
