Veranderingen aan zaakafhandelcompont Helm chart gedaan t/m 6-7-2024 overgenomen

--- a/charts/zac/values.yaml
+++ b/charts/zac/values.yaml
@@ -315,6 +315,9 @@ officeConverter:
   tolerations: [ ]
 
 opentelemetrycollector:
+  enabled: true
+  samplerType: "off"
+  endpoint: "http://zac-opentelemetrycollector:4317"
   mode: deployment
   replicaCount: 1
   presets:
