--- a/charts/zac/templates/config.yaml
+++ b/charts/zac/templates/config.yaml
@@ -38,10 +38,8 @@ data:
   SIGNALERINGEN_DELETE_OLDER_THAN_DAYS: {{ required "Valid .Values.deleteSignaleringenCronjob.deleteOlderThanDays entry required!" .Values.deleteSignaleringenCronjob.deleteOlderThanDays | quote }}
   SMTP_PORT: {{ required "Valid .Values.mail.smtp.port entry required!" .Values.mail.smtp.port | quote }}
   SMTP_SERVER: {{ required "Valid .Values.mail.smtp.server entry required!" .Values.mail.smtp.server }}
-  {{- if index .Values "opentelemetry-collector" "enabled" }}
-  SUBSYSTEM_OPENTELEMETRY__SAMPLER_TYPE: {{ ((.Values.opentelemetry_zaakafhandelcomponent).sampler_type) | default "-off" }}
-  SUBSYSTEM_OPENTELEMETRY__ENDPOINT: {{ ((.Values.opentelemetry_zaakafhandelcomponent).endpoint) | default (printf "http://%s-opentelemetry-collector:4317" .Release.Name) }}
-  {{- end }}
+  SUBSYSTEM_OPENTELEMETRY__SAMPLER_TYPE: {{ .Values.opentelemetrycollector.samplerType | quote }}
+  SUBSYSTEM_OPENTELEMETRY__ENDPOINT: {{ .Values.opentelemetrycollector.endpoint }}
   SD_CLIENT_MP_REST_URL: {{ required "Valid .Values.smartDocuments.url entry required!" .Values.smartDocuments.url }}
   {{- if .Values.smartDocuments.fixedUserName }}
   SD_FIXED_USER_NAME: {{ .Values.smartDocuments.fixedUserName }}
