fix voor database.password

--- a/charts/vngreferentielijsten/templates/secret.yaml
+++ b/charts/vngreferentielijsten/templates/secret.yaml
@@ -6,6 +6,6 @@ metadata:
     app.kubernetes.io/name: {{ include "vrl.name" . }}
     {{- include "vrl.labels" . | nindent 4 }}
 stringData:
-  db-password: {{ required ".Values.database.password is required" .Values.db.password | quote}}
+  db-password: {{ required ".Values.database.password is required" .Values.database.password | quote}}
   secret-key: {{ required ".Values.secretKey is required" .Values.secretKey | quote}}
 
