--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -2,13 +2,19 @@ apiVersion: v2
 name: podiumd
 description: A Helm chart for PodiumD
 type: application
-version: 1.0.0-alpha.2
+version: 1.0.0-alpha.3
 appVersion: "1.3.0"
 dependencies:
   - name: keycloak
     version: ~21.2.2
     repository: "@bitnami"
     condition: keycloak.enabled
+  - name: openldap
+    version: ~1.0.1
+    repository: "@dimpact"
+    condition: openldap.enabled
+    tags:
+      - zaak
   - name: clamav
     version: ~3.1.0
     repository: "@wiremind"
@@ -35,6 +41,19 @@ dependencies:
     version: ~1.3.2
     repository: "@maykinmedia"
     condition: openklant.enabled
+  - name: brpmock
+    version: ~1.2.2
+    repository: "@dimpact"
+    condition: brpmock.enabled
+    tags:
+      - contact
+      - zaak
+  - name: vngreferentielijsten
+    version: ~1.1.3
+    repository: "@dimpact"
+    condition: vngreferentielijsten.enabled
+    tags:
+      - zaak
   - name: openforms
     alias: openformulieren
     version: ~1.3.0
@@ -48,3 +67,9 @@ dependencies:
     condition: openinwoner.enabled
     tags:
       - portaal
+  - name: zac
+    version: ~1.0.0
+    repository: "@dimpact"
+    condition: zac.enabled
+    tags:
+      - zaak
