Eerste alpha versie KISS Helm Chart

--- a/charts/kiss/values.yaml
+++ b/charts/kiss/values.yaml
@@ -1,3 +1,6 @@
+global:
+  kibanaEnabled=true
+
 brp:
   baseUrl: ""
   apiKey: ""
@@ -67,3 +70,18 @@ adapter:
   fullnameOverride: kiss-adapter
   service:
     port: 80
+
+eckOperator:
+  managedNamespaces:
+    - podiumd
+  createClusterScopedResources: false
+  config:
+    # no RBAC access to cluster-wide storage classes, hence disable storage class validation
+    validateStorageClass: false
+  installCRDs: false
+  webhook:
+    enabled: false
+
+elasticConfig:
+  privateApiKey: ""
+  publicApiKey: ""
