--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,6 +28,10 @@ jobs:
           helm repo add opentelemetry https://open-telemetry.github.io/opentelemetry-helm-charts
           helm repo add wiremind https://wiremind.github.io/wiremind-helm-charts
           helm repo add dimpact https://Dimpact-Samenwerking.github.io/helm-charts
+          helm repo add elastic https://helm.elastic.co
+          helm repo add kiss-frontend https://raw.githubusercontent.com/Klantinteractie-Servicesysteem/KISS-frontend/main/helm
+          helm repo add kiss-adapter https://raw.githubusercontent.com/ICATT-Menselijk-Digitaal/podiumd-adapter/main/helm
+          helm repo add kiss-elastic https://raw.githubusercontent.com/Klantinteractie-Servicesysteem/.github/main/docs/scripts/elastic
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
