--- a/charts/podiumd-monitoring-logging/chart.yaml
+++ b/charts/podiumd-monitoring-logging/chart.yaml
@@ -6,9 +6,9 @@ appVersion: "1.0"
 
 dependencies:
   - name: kube-prometheus-stack
-    alias: 
     version: "~59.1.0"
     repository: "https://prometheus-community.github.io/helm-charts"
+    tags: kube-prometheus-stack
   - name: prometheus-blackbox-exporter
     version: "~8.17.0"
     repository: "https://prometheus-community.github.io/helm-charts"
