--- a/charts/podiumd-monitoring-logging/templates/smtp-secret.yaml
+++ b/charts/podiumd-monitoring-logging/templates/smtp-secret.yaml
@@ -1,1 +1,8 @@
-
+apiVersion:
+kind: Secret
+metadata:
+  name: smtp-secret
+type: Opaque
+data:
+  user: $(echo -n "${{ secrets.SMTP_USERNAME }}" | base64)
+  password: $(echo -n "${{ secrets.SMTP_PASSWORD }}" | base64)
