--- a/charts/podiumd-monitoring-logging/chart.yaml
+++ b/charts/podiumd-monitoring-logging/chart.yaml
@@ -8,22 +8,35 @@ dependencies:
   - name: kube-prometheus-stack
     version: "~59.1.0"
     repository: "https://prometheus-community.github.io/helm-charts"
-    tags: kube-prometheus-stack
+    tags: 
+      - kube-prometheus-stack
   - name: prometheus-blackbox-exporter
     version: "~8.17.0"
     repository: "https://prometheus-community.github.io/helm-charts"
+    tags:
+      - prometheus-blackbox-exporter
   - name: x509-certificate-exporter
     version: "~3.14.0"
     repository: "https://charts.enix.io"
+    tags: 
+      - x509-certificate-exporter
   - name: loki
     version: "~6.6.2"
     repository: "https://grafana.github.io/helm-charts"
+    tags: 
+      - loki
   - name: promtail
     version: "~6.15.5"
     repository: "https://grafana.github.io/helm-charts"
+    tags: 
+      - promtail
   - name: opentelemetry-collector
     version: "~0.92.0"
     repository: "https://open-telemetry.github.io/opentelemetry-helm-charts"
+    tags: 
+      - opentelemetry-collector
   - name: tempo
     version: "~1.7.3"
     repository: "https://grafana.github.io/helm-charts"
+    tags: 
+      - tempo
