--- a/.github/workflows/podiumd-monitoring-logging.yaml
+++ b/.github/workflows/podiumd-monitoring-logging.yaml
@@ -38,9 +38,9 @@ jobs:
           helm upgrade --install \
             podiumd-monitoring-logging \
             charts/podiumd-monitoring-logging/chart.yaml \
-            --values podiumd-monitoring-logging/values.yaml 
+            --values podiumd-monitoring-logging/values.yaml \
             --create-namespace \
-            --namespace ${{ env.NAMESPACE }} \
+            --namespace ${{ env.NAMESPACE }} 
             
             
             
