--- a/.github/workflows/podiumd-monitoring-logging.yaml
+++ b/.github/workflows/podiumd-monitoring-logging.yaml
@@ -38,7 +38,7 @@ jobs:
           helm upgrade --install \
             podiumd-monitoring-logging \
             ./charts/podiumd-monitoring-logging/chart.yaml \
-            --values charts/podiumd-monitoring-logging/values.yaml \
+            --values ./charts/podiumd-monitoring-logging/values.yaml \
             --create-namespace \
             --namespace ${{ env.NAMESPACE }} 
             
