--- a/charts/podiumd-monitoring-logging/values.yaml
+++ b/charts/podiumd-monitoring-logging/values.yaml
@@ -571,6 +571,11 @@ loki:
     replicas: 0
   bloomGateway:
     replicas: 0
+
+ 
+  monitoring:
+    serviceMonitor:
+      enabled: true   
     
 promtail:
   config:
