--- a/charts/podiumd-monitoring-logging/values.yaml
+++ b/charts/podiumd-monitoring-logging/values.yaml
@@ -590,3 +590,8 @@ opentelemetry-collector:
     repository: otel/opentelemetry-collector-k8s
   command:
     name: otelcol-k8s
+    
+helm-exporter:
+  serviceMonitor:
+  # Specifies whether a ServiceMonitor should be created
+  create: true
