--- a/charts/podiumd-monitoring-logging/templates/smtp-secret.yaml
+++ b/charts/podiumd-monitoring-logging/templates/smtp-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: smtp-secret
 type: Opaque
 data:
-  user: {{ .Values.smtpUsername | base64  | quote }}
-  password: {{  .Values.smtpPassword | base64  | quote }}
+  user: {{ .Values.smtp.username | base64  | quote }}
+  password: {{  .Values.smtp.password | base64  | quote }}
