Small fixes ZAC helm chart.

--- a/charts/zac/values.yaml
+++ b/charts/zac/values.yaml
@@ -315,6 +315,7 @@ officeConverter:
   tolerations: [ ]
 
 opentelemetrycollector:
+  samplerType: "off"
   mode: deployment
   replicaCount: 1
   presets:
