--- a/charts/zac/templates/config.yaml
+++ b/charts/zac/templates/config.yaml
@@ -39,7 +39,7 @@ data:
   SMTP_PORT: {{ required "Valid .Values.mail.smtp.port entry required!" .Values.mail.smtp.port | quote }}
   SMTP_SERVER: {{ required "Valid .Values.mail.smtp.server entry required!" .Values.mail.smtp.server }}
   SUBSYSTEM_OPENTELEMETRY__SAMPLER_TYPE: {{ .Values.opentelemetrycollector.samplerType | quote }}
-  SUBSYSTEM_OPENTELEMETRY__ENDPOINT: {{ .Values.opentelemetrycollector.endpoint }}
+  SUBSYSTEM_OPENTELEMETRY__ENDPOINT: {{ .Values.opentelemetrycollector.endpoint | default (printf "http://%s-opentelemetry-collector:4317" .Release.Name) }}
   SD_CLIENT_MP_REST_URL: {{ required "Valid .Values.smartDocuments.url entry required!" .Values.smartDocuments.url }}
   {{- if .Values.smartDocuments.fixedUserName }}
   SD_FIXED_USER_NAME: {{ .Values.smartDocuments.fixedUserName }}
