--- a/charts/kiss/templates/adapter-secret.yaml
+++ b/charts/kiss/templates/adapter-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: podiumd-adapter-secrets
+  name: adapter-secret
   labels:
     {{- include "kiss.labels" . | nindent 4 }}
     app.kubernetes.io/name: {{ include "kiss.name" . }}-adapter-secret
