--- a/charts/kiss/templates/frontend-secret.yaml
+++ b/charts/kiss/templates/frontend-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: kiss-secrets
+  name: frontend-secret
   labels:
     {{- include "kiss.labels" . | nindent 4 }}
     app.kubernetes.io/name: {{ include "kiss.name" . }}-frontend-secret
