--- a/charts/kiss/templates/adapter-config.yaml
+++ b/charts/kiss/templates/adapter-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: podiumd-adapter-config
+  name: adapter-config
   labels:
     {{- include "kiss.labels" . | nindent 4 }}
     app.kubernetes.io/name: {{ include "kiss.name" . }}-adapter-config
@@ -12,4 +12,4 @@ data:
   ESUITE_BASE_URL: {{ .Values.esuite.baseUrl | quote }}
   INTERNE_TAAK_OBJECT_TYPE_URL: {{ printf "%s/api/v2/objecttypes/%s" .Values.objecttypen.baseUrlIntern .Values.objecttypen.interneTaakUUID | quote }}
   SMOELENBOEK_BASE_URL: {{ .Values.objecten.baseUrl | quote }}
-  SMOELENBOEK_OBJECT_TYPE_URL: {{ printf "%s/api/v2/objecttypes/%s" .Values.objecttypen.baseUrlIntern .Values.objecttypen.afdelingUUID | quote }}
+  SMOELENBOEK_OBJECT_TYPE_URL: {{ printf "%s/api/v2/objecttypes/%s" .Values.objecttypen.baseUrlIntern .Values.objecttypen.medewerkerUUID | quote }}
