--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -1,44 +1,52 @@
 apiVersion: v2
 name: podiumd
-description: A Helm chart for PodiumD
+description: PodiumD Helm chart
 type: application
-version: 1.0.0-alpha.3
+version: 1.0.0
 appVersion: "1.3.0"
 dependencies:
   - name: keycloak
-    version: ~21.2.2
+    version: 21.4.4
+    # appVersion: 24.0.5
     repository: "@bitnami"
     condition: keycloak.enabled
   - name: openldap
-    version: ~1.0.1
+    version: 1.0.1
+    # appVersion: 2.6.8
     repository: "@dimpact"
     condition: openldap.enabled
     tags:
       - zaak
   - name: clamav
-    version: ~3.1.0
+    version: 3.1.0
+    # appVersion: 1.3.0 -> 1.3.1
     repository: "@wiremind"
     condition: clamav.enabled
     tags:
       - formulier
   - name: openzaak
-    version: ~1.3.2
+    version: 1.3.2
+    # appVersion: 1.12.1
     repository: "@maykinmedia"
     condition: openzaak.enabled
   - name: opennotificaties
-    version: ~1.3.2
+    version: 1.3.2
+    # appVersion: 1.5.2
     repository: "@maykinmedia"
     condition: opennotificaties.enabled
   - name: objecten
-    version: ~2.3.1
+    version: 2.3.1
+    # appVersion: 2.3.1
     repository: "@maykinmedia"
     condition: objecten.enabled
   - name: objecttypen
-    version: ~1.0.5
+    version: 1.0.5
+    # appVersion: 2.1.0
     repository: "@maykinmedia"
     condition: objecttypen.enabled
   - name: openklant
     version: ~1.3.2
+    # appVersion: 0.5-pre -> 2.0.0
     repository: "@maykinmedia"
     condition: openklant.enabled
   - name: brpmock
@@ -56,14 +64,23 @@ dependencies:
       - zaak
   - name: openforms
     alias: openformulieren
-    version: ~1.3.0
+    version: 1.3.0
+    # appVersion: 2.5.6 -> 2.6.7
     repository: "@maykinmedia"
     condition: openformulieren.enabled
     tags:
       - formulier
   - name: openinwoner
-    version: ~1.3.2
+    version: 1.4.0
+    # appVersion: 1.17.2
     repository: "@maykinmedia"
     condition: openinwoner.enabled
     tags:
       - portaal
+#  - name: kiss-elastic
+#    alias: kisselastic
+#    version: 1.0.0-alpha.1
+#    repository: "@kiss-elastic"
+#    condition: kisselastic.enabled
+#    tags:
+#      - contact
