--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1,7 +1,7 @@
 tags:
   formulier: true
-  contact: false
   portaal: false
+  contact: false
   zaak: false
 
 global:
@@ -9,11 +9,20 @@ global:
     enabled: true
 
 keycloak:
-  image:
-    tag: "24.0.4-debian-12-r1"
   config:
     realmDisplayName: "PodiumD"
     realmFrontendUrl: ""
+  auth:
+    adminUser: admin
+    adminPassword: ChangeMeNow
+  production: true
+  proxy: edge
+  resources:
+    requests:
+      cpu: 100m
+      memory: 512Mi
+    limits:
+      memory: 1024Mi
   keycloakConfigCli:
     enabled: true
     existingConfigmap: keycloak-config
@@ -172,8 +181,6 @@ openformulieren:
     fullnameOverride: openformulieren-redis
 
 openinwoner:
-  image:
-    tag: "1.16.5"
   configuration:
     oidcUrl: "http://openinwoner.podiumd.svc.cluster.local"
     oidcSecret: "<openinwoner>"
@@ -195,6 +202,12 @@ openinwoner:
     nameOverride: openinwoner-elasticsearch
     fullnameOverride: openinwoner-elasticsearch
 
+kisselastic:
+  kibanaDomain: kiss-kb-http.podiumd.svc.cluster.local:5601
+  eck-operator:
+    managedNamespaces:
+      - podiumd
+
 kiss:
   configuration:
     oidcUrl: "http://kiss.podiumd.svc.cluster.local"
@@ -209,7 +222,9 @@ zac:
 
 clamav:
   image:
-    tag: "stable_base"
+    tag: "1.3.1"
+  nameOverride: "clamav"
+  fullnameOverride: "clamav"
   Resources:
     limits:
       cpu: 100m
